integration/snapshots/query-coverage-implication-not-held_stdout.snap
---
source: xtask/src/tests.rs
expression: stdout
---
$ duvet query -c coverage -r *.xml -f jacoco-xml --verbose
    Starting duvet in query mode...
  Extracting requirements
   Extracted requirements from 1 specifications 
    Scanning sources
     Scanned 4 sources 
     Parsing annotations
      Parsed 7 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 2 sections 
    Matching references
     Matched 7 references 
     Running test execution correlation check...
    Coverage model: 2 file(s) language-aware (verified), 0 file(s) degraded — no classifier (verified)
  
Coverage: ✓ PASS

  Coverage reports checked: 1
  Executed tests: 2
  Executed implementations: 1
  Successful correlations: 2
  Failed correlations: 0
  Tests with no implementation: 0
  Unwitnessed tests: 0

  ☞ Successful correlation
    ╭─[src/test/java/com/example/ImplTest.java:10:13]
  9 │         public void testImplemented() {
 10 │ ╭─▶         //= spec.md#section-1
 11 │ │           //= type=test
 12 │ ├─▶         //# This MUST be implemented and checked
    · ╰──── Test annotation
 13 │     
    ╰────
  help: discharged by jacoco-coverage.xml (executed)

Advice: 
  ☞ Related context for:
  │  Successful correlation
   ╭─[src/main/java/com/example/Impl.java:6:13]
 5 │         public static int implemented() {
 6 │ ╭─▶         //= spec.md#section-1
 7 │ │           //= type=implementation
 8 │ ├─▶         //# This MUST be implemented and checked
   · ╰──── Executed implementation
 9 │             return 1; // line 9: executed
   ╰────

  ☞ Successful correlation
    ╭─[src/test/java/com/example/ImplTest.java:19:13]
 18 │         public void testByConstruction() {
 19 │ ╭─▶         //= spec.md#section-2
 20 │ │           //= type=test
 21 │ ├─▶         //# This MUST hold by construction
    · ╰──── Test annotation
 22 │     
    ╰────
  help: discharged by jacoco-coverage.xml (executed)

  ☞ Executed annotations

Advice: 
  ☞ Related context for:
  │  Executed annotations
    ╭─[src/test/java/com/example/ImplTest.java:10:13]
  9 │         public void testImplemented() {
 10 │ ╭─▶         //= spec.md#section-1
 11 │ │           //= type=test
 12 │ ├─▶         //# This MUST be implemented and checked
    · ╰──── Executed test
 13 │     
    ╰────

Advice: 
  ☞ Related context for:
  │  Executed annotations
    ╭─[src/test/java/com/example/ImplTest.java:19:13]
 18 │         public void testByConstruction() {
 19 │ ╭─▶         //= spec.md#section-2
 20 │ │           //= type=test
 21 │ ├─▶         //# This MUST hold by construction
    · ╰──── Executed test
 22 │     
    ╰────

Advice: 
  ☞ Related context for:
  │  Executed annotations
   ╭─[src/main/java/com/example/Impl.java:6:13]
 5 │         public static int implemented() {
 6 │ ╭─▶         //= spec.md#section-1
 7 │ │           //= type=implementation
 8 │ ├─▶         //# This MUST be implemented and checked
   · ╰──── Executed implementation
 9 │             return 1; // line 9: executed
   ╰────



Overall: ✓ PASS
