integration/snapshots/query-coverage-lcov-aggregate-discharge_stdout.snap
---
source: xtask/src/tests.rs
expression: stdout
---
$ duvet query -c coverage -r merged.info -f lcov
    Starting duvet in query mode...
  Extracting requirements
    Scanning sources
     Scanned 3 sources 
     Parsing annotations
      Parsed 3 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 3 references 
  
Coverage: ✓ PASS

  Coverage reports checked: 1
  Executed tests: 1
  Executed implementations: 1
  Successful correlations: 1
  Failed correlations: 0
  Tests with no implementation: 0


Overall: ✓ PASS
