integration/snapshots/query-coverage-lcov-malformed_stderr.snap
---
source: xtask/src/tests.rs
expression: stderr
---
$ duvet query -c coverage -r lcov.info -f lcov
EXIT: Some(1)
    Starting duvet in query mode...
  Extracting requirements
    Scanning sources
     Scanned 2 sources 
     Parsing annotations
      Parsed 2 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 2 references 
  × Coverage error: Invalid coverage data: line 3: malformed record
  │ "end_of_record ": a record starting with 'end_of_record' must be exactly
  │ 'end_of_record'

